# gtdraw

./: .gitignore  CLAUDE.md  README.md  gui_settings.yaml  packages.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  publish.yml  test.yml
_build/logs/: myst.build.json
docs/: _config.yml  _toc.yml  architecture.md  cli.md  creating_games.md  ef_format.md  gui.md  index.md  installation.md  myst.yml  python_api.md
docs/developer/: contributing.md  development.md  documentation.md
docs/user/: cli.md  ef_format.md  gui.md  installation.md  python_api.md
games/: 2smp_v1.ef  2smp_v3.ef  31info.ef  P3.ef  T1.ef  T11.ef  T12.ef  T2.ef  Ult.ef  allais.ef  cheat.ef  count-a.ef  count-b.ef  e0tree-a.ef  e0tree-b.ef  e2tree-a.ef  e2tree-b.ef  e322.ef  e3tree.ef  e3tree2.ef  e3tree3.ef  eIIext.ef  espne.ef  etree.ef  etree2.ef  example_v1.ef  example_v3.ef  fill.ef  ftree.ef  ftreeBI.ef  hari.ef  irdap1.ef  kuhn.ef  kuhn_v1.ef  kuhn_v3.ef  montyhall.ef  mult.ef  nftoef.ef  nopr.ef  notree.ef  (+21 more)
games/efg/: alt_russian_fixed.efg  alt_russian_sequential.efg
src/draw_tree/: __init__.py  app.py  cli.py  converter.py  core.py  gambit_layout.py  layout.py
src/efgviz/: __init__.py  app.py  cli.py  core.py
src/gtdraw/: __init__.py  app.py  cli.py  converter.py  core.py  gambit_layout.py  layout_editor.py
src/gtdraw/components/layout_editor/: index.html
tests/: test_color_schemes.py  test_default_layout.py  test_drawtree.py  test_gambit_layout.py  test_layout_editor.py  test_tutorials.py
tutorial/: README.md  basic_usage.ipynb  draw_ef.ipynb  draw_efg_defaultLayout.ipynb  draw_efg_gambitLayout.ipynb  draw_efg_gambitLayout_generate.ipynb
