[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draw_tree"
version = "0.4.3"
description = "Game tree drawing tool for extensive form games"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["game theory", "tikz", "visualization", "trees", "economics"]

# Required runtime dependencies (previously optional under the 'jupyter' extra)
dependencies = ["jupyter-tikz", "ipykernel", "distinctipy"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov", "nbformat", "nbclient", "ipykernel", "pygambit"]

[project.scripts]
draw_tree = "draw_tree.cli:main"

[project.urls]
Homepage = "https://github.com/gambitproject/draw_tree"
Repository = "https://github.com/gambitproject/draw_tree"
Issues = "https://github.com/gambitproject/draw_tree/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
draw_tree = ["*.ef"]