[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtdraw"
version = "0.12.0"
description = "Game tree drawing tool for extensive form games"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["game theory", "tikz", "visualization", "trees", "economics"]

dependencies = ["jupyter-tikz", "ipykernel", "distinctipy", "streamlit", "pygambit", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov", "jupyter-book>=2.0.0", "sphinx-thebe"]

[project.scripts]
gtdraw = "gtdraw.cli:main"

[project.urls]
Homepage = "https://github.com/gambitproject/draw_tree"
Repository = "https://github.com/gambitproject/draw_tree"
Issues = "https://github.com/gambitproject/draw_tree/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gtdraw = ["*.ef"]